@@ -1,3 +1,6 @@
+2011-11-19 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Improve client error message (ticket #102).
+
 2011-11-18 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix 'shine' man page and example model file (ticket #104).
 
